syntax = "proto3";

package gordon;

option go_package = "github.com/bnema/gordon/internal/grpc";

// SecretsService handles secret retrieval and token management.
// This service is isolated and has no HTTP exposure.
service SecretsService {
  // GetSecret retrieves a secret from the configured backend (pass/sops)
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
  
  // Token management operations - mirror out.TokenStore interface
  rpc SaveToken(SaveTokenRequest) returns (SaveTokenResponse);
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse);
  rpc ListTokens(ListTokensRequest) returns (ListTokensResponse);
  rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
  rpc IsRevoked(IsRevokedRequest) returns (IsRevokedResponse);
  rpc DeleteToken(DeleteTokenRequest) returns (DeleteTokenResponse);
}

// Token represents a JWT token with metadata
message Token {
  string id = 1;
  string subject = 2;        // User or service identifier
  repeated string scopes = 3;
  int64 issued_at = 4;       // Unix timestamp
  int64 expires_at = 5;      // Unix timestamp (0 for no expiration)
  map<string, string> metadata = 6;
}

// GetSecret retrieves a secret value
message GetSecretRequest {
  string provider = 1;       // "pass", "sops", etc.
  string path = 2;           // Secret path/key
}

message GetSecretResponse {
  string value = 1;
  bool found = 2;
}

// SaveToken stores a token
message SaveTokenRequest {
  Token token = 1;
  string jwt = 2;            // The actual JWT string
}

message SaveTokenResponse {
  bool success = 1;
}

// GetToken retrieves a token by subject
message GetTokenRequest {
  string subject = 1;
}

message GetTokenResponse {
  string jwt = 1;
  Token token = 2;
  bool found = 3;
}

// ListTokens returns all tokens
message ListTokensRequest {}

message ListTokensResponse {
  repeated Token tokens = 1;
}

// RevokeToken revokes a specific token
message RevokeTokenRequest {
  string token_id = 1;
}

message RevokeTokenResponse {
  bool success = 1;
}

// IsRevoked checks if a token is revoked
message IsRevokedRequest {
  string token_id = 1;
}

message IsRevokedResponse {
  bool revoked = 1;
}

// DeleteToken removes a token
message DeleteTokenRequest {
  string subject = 1;
}

message DeleteTokenResponse {
  bool success = 1;
}
